fix: 🐛 move styles to disco styles, dark mode now works
also updated naming for the dashboard classes/slots

--- a/src/stories/chart-container.stories.mdx
+++ b/src/stories/chart-container.stories.mdx
@@ -5,7 +5,7 @@ import DHeatMap from '../components/d-chart-heatmap.vue';
 import DBaseDashboard from '../components/d-base-dashboard.vue';
 
 <Meta
-    title="Elements/Charts/Chart Container"
+    title="Visualization/Chart Container"
     component={DChartContainer}
     argTypes={{
       width: { control: { type: 'select', options: ['full', 'one-third', 'half', 'two-thirds'] } }
