--- a/src/stories/heatmap.stories.mdx
+++ b/src/stories/heatmap.stories.mdx
@@ -3,7 +3,7 @@ import DChartContainer from '../components/d-chart-container.vue';
 import DHeatMap from '../components/d-chart-heatmap.vue';
 
 <Meta
-    title="Elements/Charts/Heat Map"
+    title="Visualization/Charts/Heat Map"
     component={DHeatMap}
 />
 
