--- a/src/stories/multilinechart.stories.mdx
+++ b/src/stories/multilinechart.stories.mdx
@@ -3,7 +3,7 @@ import DChartContainer from '../components/d-chart-container.vue';
 import DMultiLineChart from '../components/d-chart-multiline.vue';
 
 <Meta
-    title="Elements/Charts/Multi Line Chart"
+    title="Visualization/Charts/Multi Line Chart"
     component={DMultiLineChart}
 />
 
