--- a/src/stories/dashboard.stories.mdx
+++ b/src/stories/dashboard.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, ArgsTable, Story, Canvas } from '@storybook/addon-docs/blocks';
 import DBaseDashboard from '../components/d-base-dashboard.vue';
 
 <Meta
-    title="Elements/Charts/Dashboard"
+    title="Visualization/Dashboard"
     component={DBaseDashboard}
 />
 
@@ -16,9 +16,9 @@ Dashboards are a simple organization tool, with some styling for flexibly arrang
 
 ```html
 <DBaseDashboard>
-  <template #main-nav></template>
-  <template #main-header></template>
-  <template #main-section></template>
+  <template #nav></template>
+  <template #header></template>
+  <template #section></template>
 </DBaseDashboard>
 ```
 
@@ -27,13 +27,13 @@ export const DashboardTemplate = (args, { argTypes }) => ({
   components: { DBaseDashboard },
   template: `
     <DBaseDashboard>
-      <template #main-nav>
+      <template #nav>
         You are here
       </template>
-      <template #main-header>
+      <template #header>
         A Chart Story
       </template>
-      <template #main-section>
+      <template #section>
         This is where the dashboard contents go.
       </template>
     </DBaseDashboard>
