fix: add varialbe label to heatmap

--- a/src/stories/chart-container.stories.mdx
+++ b/src/stories/chart-container.stories.mdx
@@ -66,6 +66,7 @@ export const ChartContainerTemplate = (args, { argTypes }) => ({
               y="station"
               y-label="Buoy ID"
               variable="temp"
+              variable-label="Temp. (C)"
             />
           </template>
         </DChartContainer>
