--- a/src/stories/heatmap.stories.mdx
+++ b/src/stories/heatmap.stories.mdx
@@ -62,6 +62,7 @@ export const Template = (args, { argTypes }) => ({
               :variable-label="variableLabel"
               :include-actions="includeActions"
               :spec-override="specOverride"
+              :enable-darkmode="enableDarkmode"
             />
           </template>
         </DChartContainer>
@@ -90,7 +91,8 @@ export const Template = (args, { argTypes }) => ({
       { month: 3, station: 'B', temp: 2, depth: 3.2},
       { month: 3, station: 'C', temp: 2.3, depth: 3.9}
     ],
-    specOverride: {axes: [{orient: 'top'}]}
+    specOverride: {axes: [{orient: 'top'}]},
+    enableDarkmode: true,
   }}>
     {Template.bind({})}
   </Story>
