feat: 🎸 stacked bar chart
Adds a stacked bar chart so you can compare different samples in the
same bar chart.

--- a/src/stories/stackedbarchart.stories.mdx
+++ b/src/stories/stackedbarchart.stories.mdx
@@ -3,22 +3,22 @@ import DChartContainer from '../components/d-chart-container.vue';
 import DStackedBarChart from '../components/d-chart-stacked-bar.vue';
 
 <Meta
-    title="Visualization/Charts/Bar Chart"
+    title="Visualization/Charts/Stacked Bar Chart"
     component={DStackedBarChart}
 />
 
 
-# Bar Chart
+# Stacked Bar Chart
 
-A Bar Chart shows aggregated data over categorical values on the x axis.
+A Stacked Bar Chart shows aggregated data over categorical values on the x axis.
 
-<ArgsTable story="Bar Chart" />
+<ArgsTable story="Stacked Bar Chart" />
 
-## DBarChart component
+## DStackedBarChart component
 
 ```html
-<DBarChart
-  id="barchart"
+<DStackedBarChart
+  id="stackedbarchart"
   :dataset="[
     { category: 'A', amount: 28},
     { category: 'B', amount: 55},
