feat: 🎸 stacked bar chart
stacked bar chart to compare multiple samples

--- a/src/stories/stackedbarchart.stories.mdx
+++ b/src/stories/stackedbarchart.stories.mdx
@@ -44,7 +44,7 @@ export const Template = (args, { argTypes }) => ({
           </template
           >
           <template #chart>
-            <DBarChart
+            <DStackedBarChart
               id="stackedbarchart"
               :dataset="dataset"
               :min-width="minWidth"
