Finished Stacked Bar Chart

--- a/src/stories/chart-container.stories.mdx
+++ b/src/stories/chart-container.stories.mdx
@@ -2,6 +2,7 @@ import { Meta, ArgsTable, Story, Canvas } from '@storybook/addon-docs/blocks';
 import DChartContainer from '../components/d-chart-container.vue';
 import DMultiLineChart from '../components/d-chart-multiline.vue';
 import DHeatMap from '../components/d-chart-heatmap.vue';
+import DStackedBarChart from '../components/d-chart-bar.vue';
 import DBaseDashboard from '../components/d-base-dashboard.vue';
 
 <Meta
